--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "@scissor/scissor",
+  "name": "@scissor/monorepo",
   "version": "0.1.0",
   "description": "A modern SASS/SCSS framework",
   "main": "index.js",
+  "workspaces": [
+    "dist/framework",
+    "dist/use",
+    "dist/define"
+  ],
   "scripts": {
-    "test": "vitest packages library",
-    "playground": "sass playground --watch --style=expanded --no-source-map"
+    "test": "vitest --watch",
+    "playground": "sass playground --watch --style=expanded --no-source-map --load-path=node_modules",
+    "build:framework": "cp -a src/. dist/framework/",
+    "build:use": "cp -r src/use.scss dist/use/index.scss",
+    "build:define": "cp -r src/define.scss dist/define/index.scss",
+    "build": "npm run build:framework && npm run build:use && npm run build:define"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "sass-true": "^7.0.0",
-    "vitest": "^1.0.4"
+    "syncpack": "^12.3.0",
+    "vitest": "^1.1.0",
+    "sass-embedded": "^1.69.6"
   },
-  "dependencies": {
-    "sass": "^1.69.5",
-    "sass-bitwise": "^1.0.0",
-    "sass-embedded": "^1.69.5"
-  }
+  "author": "Maximillian George",
+  "license": "MIT"
 }
