--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:define": "cp -r src/define.scss dist/define/index.scss",
     "build": "npm run build:framework && npm run build:use && npm run build:define",
     "patch": "npm version patch && npm version patch --workspaces && syncpack fix-mismatches",
-    "publish": "npm publish --access public --workspaces"
+    "publish:packages": "npm publish --access public --workspaces"
   },
   "devDependencies": {
     "sass-true": "^7.0.0",
