--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@scissor/monorepo",
   "version": "0.1.3",
   "description": "A modern SASS/SCSS framework",
-  "main": "index.js",
+  "main": "index.scss",
   "workspaces": [
     "dist/framework",
     "dist/use",
