--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
   ],
   "scripts": {
     "test": "vitest --watch",
-    "playground": "sass playground --watch --style=expanded --no-source-map --load-path=node_modules",
-    "build:framework": "cp -a src/. dist/framework/",
-    "build:use": "cp -r src/use.scss dist/use/index.scss",
-    "build:define": "cp -r src/define.scss dist/define/index.scss",
-    "build": "npm run build:framework && npm run build:use && npm run build:define",
+    "playground": "",
     "patch": "npm version patch && npm version patch --workspaces && syncpack fix-mismatches",
     "publish:packages": "npm publish --access public --workspaces"
   },
   "devDependencies": {
-    "sass-true": "^7.0.0",
     "syncpack": "^12.3.0",
-    "vitest": "^1.1.0",
-    "sass-embedded": "^1.69.6"
+    "vitest": "^1.1.0"
   },
   "author": "Maximillian George",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vue/test-utils": "^2.4.3",
+    "happy-dom": "^12.10.3",
+    "postcss": "^8.4.32",
+    "vite": "^5.0.10",
+    "vue": "^3.4.3"
+  }
 }
